name submit triggers next step with event listener

--- a/index.html
+++ b/index.html
@@ -33,15 +33,19 @@
       </footer>
 
     </section>
-    <section id="character-select" class="screen">
+    <section id="character-creation" class="screen">
 
       <h2>Character Creation</h2>
 
-      <nav>
+      <nav id="character-creation-nav">
         <ul>
-          <li>name</li>
+          <li>
+            <button type="button">name</button>
+          </li>
           <!-- <li>race</li> -->
-          <li>class</li>
+          <li>
+            <button type="button">class</button>
+          </li>
         </ul>
       </nav>
 
