--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
         <h3>Class</h3>
         <ul id="class-list">
           <li>
-            <button id="warrior-button" type="button">Warrior</button>
+            <button id="warrior-button" type="button" value="warrior">Warrior</button>
           </li>
           <li>
-            <button id="rogue-button" type="button">Rogue</button>
+            <button id="rogue-button" type="button" value="rogue">Rogue</button>
           </li>
           <li>
-            <button id="mage-button" type="button">Mage</button>
+            <button id="mage-button" type="button" value="mage">Mage</button>
           </li>
         </ul>
         <!-- <footer>
