name form and class select buttons assign value to summary list

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <section id="select-name" class="char-select-sub-screen">
         <h3>Name</h3>
         <form id="char-name">
-          <input type="text" placeholder="enter character name" required>
+          <input id="charName" type="text" placeholder="enter character name" required>
           <button id="name-submit" type="submit">Next</button>
         </form>
       </section>
@@ -61,13 +61,13 @@
         <h3>Class</h3>
         <ul id="class-list">
           <li>
-            <button id="warrior-button" type="button" value="warrior">Warrior</button>
+            <button id="warrior-button" type="button" value="Warrior">Warrior</button>
           </li>
           <li>
-            <button id="rogue-button" type="button" value="rogue">Rogue</button>
+            <button id="rogue-button" type="button" value="Rogue">Rogue</button>
           </li>
           <li>
-            <button id="mage-button" type="button" value="mage">Mage</button>
+            <button id="mage-button" type="button" value="Mage">Mage</button>
           </li>
         </ul>
         <!-- <footer>
@@ -81,6 +81,7 @@
           <li id="summary-name">Name</li>
           <li id="summary-class">Class</li>
         </ul>
+        <button type="button">Start Game</button>
       </section>
 
     </section>
