created PlayerCharacter constructor function and passed in global values when game start button is hit

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <li id="summary-name">Name</li>
           <li id="summary-class">Class</li>
         </ul>
-        <button type="button">Start Game</button>
+        <button id="start-game" type="button">Start Game</button>
       </section>
 
     </section>
