working on drawing to canvas, only a square is there now

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
       </nav>
 
-      <section id="select-name" class="char-select-sub-screen">
+      <section id="select-name" class="character-select-sub-screen">
         <h3>Name</h3>
         <form id="char-name">
           <input id="charName" type="text" placeholder="enter character name" required>
@@ -76,7 +76,7 @@
         </footer> -->
       </section>
 
-      <section id="character-summary" class="character-select-sub-button">
+      <section id="character-summary" class="character-select-sub-screen">
         <ul>
           <li id="summary-name">Name</li>
           <li id="summary-class">Class</li>
@@ -85,6 +85,10 @@
       </section>
 
     </section>
+
+    <canvas id="dungeon-screen" width="600" height="600">
+
+    </canvas>
 
   </main>
 
