--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     </section>
 
-    <canvas id="dungeon-screen" width="600" height="600">
+    <canvas id="dungeon-screen" width="600" height="400">
 
     </canvas>
 
@@ -96,5 +96,8 @@
 
   </footer>
   <script src="./js/app.js"></script>
+  <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
+  <script src="https://code.createjs.com/1.0.0/tweenjs.min.js"></script>
+
 </body>
 </html>
