added class images and show/hide to class button hover

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
             <button id="mage-button" type="button" value="Mage">Mage</button>
           </li>
         </ul>
+        <section>
+          <img id="warrior-img" src="img/warrior.png" alt="warrior">
+          <img id="rogue-img" src="img/rogue.jpg" alt="rogue">
+          <img id="mage-img" src="img/mage.png" alt="mage">
+        </section>
         <!-- <footer>
           <button type="button">Back</button>
           <button type="button">Back to Title</button>
@@ -87,12 +92,22 @@
 
     </section>
 
-    <canvas id="dungeon-screen" width="600" height="400">
+    <!-- <canvas id="dungeon-screen" width="600" height="400">
 
-    </canvas>
+    </canvas> -->
+    <section id="dungeon-screen" class="screen">
+      <ul id="left-right-buttons">
+        <li>
+          <button type="button" value="left">Left</button>
+        </li>
+        <li>
+          <button type="button" value="right">Right</button>
+        </li>
+      </ul>
+    </section>
 
     <section id="combat-screen" class="screen">
-
+      <p>COMBAT</p>
     </section>
 
   </main>
